syntax = "proto3";

message Project{
    int32 id = 1;
    string name =2;
    string userId =3;
    int32 currentVersion=4;
    int32 totalVersion=5;
}

message projectPortal{
    repeated Project projects =1;
}